# sparkloom

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/agents/: capture-engineer.md  cloud-engineer.md
.claude/commands/: dev.md  test.md
apps/desktop/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/capture/: audio.rs  camera.rs  mod.rs  permissions.rs  screen.rs
apps/desktop/src/encoding/: mod.rs  segmenter.rs
apps/desktop/src/storage/: mod.rs
apps/desktop/src/transcription/: audio.rs  mod.rs  model_manager.rs  summary.rs  whisper.rs
apps/desktop/src/upload/: manager.rs  mod.rs  r2_client.rs
apps/desktop/ui/: index.html  package.json
apps/desktop/ui/src/: App.tsx
apps/desktop/ui/src/components/: CameraBubble.tsx  Dashboard.tsx  PostRecordingPanel.tsx  RecordingControls.tsx  SummarizingView.tsx  Toast.tsx  TranscribingView.tsx  UploadingView.tsx
apps/desktop/ui/src/stores/: recordingStore.ts  toastStore.ts
apps/desktop/ui/src/styles/: global.css
apps/web/: index.html  package.json
apps/web/src/: App.tsx
apps/web/src/components/: ChapterMarkers.tsx  SummaryPanel.tsx  TranscriptPanel.tsx  VideoPlayer.tsx
workers/: package.json  tsconfig.json  wrangler.toml
workers/migrations/: 0001_init.sql
workers/src/: index.ts
workers/src/db/: schema.sql
workers/src/middleware/: auth.ts
workers/src/routes/: manifest.ts  segments.ts  transcription.ts  videos.ts
(+3 files in other folders)
