[package]
name = "sparkloom-desktop"
version = "0.1.0"
edition = "2024"
description = "SparkLoom — Free Loom clone for macOS"
license = "MIT"

[lib]
name = "sparkloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sparkloom-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
whisper-rs = { version = "0.16", features = ["metal"] }
ollama-rs = { version = "0.3", features = ["stream"] }
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["png"] }
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
screencapturekit = { version = "1", features = ["macos_15_0"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
